# ai-lab-platform

./: .gitignore  README.md  content.md  docker-compose.yml  render.yaml
Image classifier/: index.html  script.js  style.css
age 7+/bot rescue/: README.md  index.html  styles.css
age 7+/cafe/: README.md  index.html
age 7+/hoppers-forest-quest/: README.md  index.html
backend/: Dockerfile  ai_lab.db-shm  ai_lab.db-wal  fly.toml  pyproject.toml
backend/app/: main.py  seed_data.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  admin.py  auth.py  certificates.py  classes.py  dashboard.py  datasets.py  exec.py  games.py  gamification.py  ml.py  projects.py  reports.py  router.py  transpiler.py  worlds.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  achievement.py  activity.py  badge.py  base.py  certificate.py  class_.py  dataset.py  game_progress.py  leaderboard.py  model.py  project.py  report_subscription.py  school.py  skill.py  training_job.py  user.py  world.py
backend/app/repositories/: user_repository.py  world_repository.py
backend/app/schemas/: auth.py  gamification.py  world.py
backend/app/services/: auth_service.py  ml_service.py  world_service.py
backend/app/utils/: data_generator.py
cafe/: editor.js  game.js  index.html  style.css
client/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
game/: bee_flower_path.py  colour_magic.py  feed_puppy.py  train_builder.py  turtle path.py
(+118 files in other folders)
